--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sai Kiran Maryada's Portfolio</title>
-  <link rel="icon" href="/images/favicon-32x32.png">
+  <link rel="shortcut icon" type="images/png" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
